_generated-doc/1.11/config/quarkus-datasource-data-sources-reactive-runtime-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-datasource-data-sources-reactive-runtime-config_configuration]]link:#quarkus-datasource-data-sources-reactive-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.cache-prepared-statements]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.cache-prepared-statements[quarkus.datasource.reactive.cache-prepared-statements]`

[.description]
--
Whether prepared statements should be cached on the client side.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.url]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.url[quarkus.datasource.reactive.url]`

[.description]
--
The datasource URL.
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.max-size]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.max-size[quarkus.datasource.reactive.max-size]`

[.description]
--
The datasource pool maximum size. Note that a separate pool instance is started for each thread using it: the size limits each individual pool instance.
--|int 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-all]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-all[quarkus.datasource.reactive.trust-all]`

[.description]
--
Whether all server certificates should be trusted.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pem]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pem[quarkus.datasource.reactive.trust-certificate-pem]`

[.description]
--
PEM Trust config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pem.certs]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pem.certs[quarkus.datasource.reactive.trust-certificate-pem.certs]`

[.description]
--
Comma-separated list of the trust certificate files (Pem format).
--|list of string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-jks]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-jks[quarkus.datasource.reactive.trust-certificate-jks]`

[.description]
--
JKS config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-jks.path]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-jks.path[quarkus.datasource.reactive.trust-certificate-jks.path]`

[.description]
--
Path of the key file (JKS format).
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-jks.password]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-jks.password[quarkus.datasource.reactive.trust-certificate-jks.password]`

[.description]
--
Password of the key file.
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pfx]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pfx[quarkus.datasource.reactive.trust-certificate-pfx]`

[.description]
--
PFX config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pfx.path]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pfx.path[quarkus.datasource.reactive.trust-certificate-pfx.path]`

[.description]
--
Path to the key file (PFX format).
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pfx.password]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.trust-certificate-pfx.password[quarkus.datasource.reactive.trust-certificate-pfx.password]`

[.description]
--
Password of the key.
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pem]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pem[quarkus.datasource.reactive.key-certificate-pem]`

[.description]
--
PEM Key/cert config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pem.keys]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pem.keys[quarkus.datasource.reactive.key-certificate-pem.keys]`

[.description]
--
Comma-separated list of the path to the key files (Pem format).
--|list of string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pem.certs]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pem.certs[quarkus.datasource.reactive.key-certificate-pem.certs]`

[.description]
--
Comma-separated list of the path to the certificate files (Pem format).
--|list of string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-jks]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-jks[quarkus.datasource.reactive.key-certificate-jks]`

[.description]
--
JKS config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-jks.path]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-jks.path[quarkus.datasource.reactive.key-certificate-jks.path]`

[.description]
--
Path of the key file (JKS format).
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-jks.password]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-jks.password[quarkus.datasource.reactive.key-certificate-jks.password]`

[.description]
--
Password of the key file.
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pfx]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pfx[quarkus.datasource.reactive.key-certificate-pfx]`

[.description]
--
PFX config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pfx.path]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pfx.path[quarkus.datasource.reactive.key-certificate-pfx.path]`

[.description]
--
Path to the key file (PFX format).
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pfx.password]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.key-certificate-pfx.password[quarkus.datasource.reactive.key-certificate-pfx.password]`

[.description]
--
Password of the key.
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.reconnect-attempts]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.reconnect-attempts[quarkus.datasource.reactive.reconnect-attempts]`

[.description]
--
The number of reconnection attempts when a pooled connection cannot be established on first try.
--|int 
|`0`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.reconnect-interval]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.reconnect-interval[quarkus.datasource.reactive.reconnect-interval]`

[.description]
--
The interval between reconnection attempts when a pooled connection cannot be established on first try.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT1S`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.idle-timeout]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.reactive.idle-timeout[quarkus.datasource.reactive.idle-timeout]`

[.description]
--
The maximum time without data written to or read from a connection before it is closed.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`no timeout`


h|[[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.named-data-sources-additional-named-datasources]]link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.named-data-sources-additional-named-datasources[Additional named datasources]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive[quarkus.datasource."datasource-name".reactive]`

[.description]
--
If we create a Reactive datasource for this datasource.
--|boolean 
|`true`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.cache-prepared-statements]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.cache-prepared-statements[quarkus.datasource."datasource-name".reactive.cache-prepared-statements]`

[.description]
--
Whether prepared statements should be cached on the client side.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.url]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.url[quarkus.datasource."datasource-name".reactive.url]`

[.description]
--
The datasource URL.
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.max-size]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.max-size[quarkus.datasource."datasource-name".reactive.max-size]`

[.description]
--
The datasource pool maximum size. Note that a separate pool instance is started for each thread using it: the size limits each individual pool instance.
--|int 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-all]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-all[quarkus.datasource."datasource-name".reactive.trust-all]`

[.description]
--
Whether all server certificates should be trusted.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pem]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pem[quarkus.datasource."datasource-name".reactive.trust-certificate-pem]`

[.description]
--
PEM Trust config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pem.certs]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pem.certs[quarkus.datasource."datasource-name".reactive.trust-certificate-pem.certs]`

[.description]
--
Comma-separated list of the trust certificate files (Pem format).
--|list of string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-jks]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-jks[quarkus.datasource."datasource-name".reactive.trust-certificate-jks]`

[.description]
--
JKS config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-jks.path]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-jks.path[quarkus.datasource."datasource-name".reactive.trust-certificate-jks.path]`

[.description]
--
Path of the key file (JKS format).
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-jks.password]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-jks.password[quarkus.datasource."datasource-name".reactive.trust-certificate-jks.password]`

[.description]
--
Password of the key file.
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pfx]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pfx[quarkus.datasource."datasource-name".reactive.trust-certificate-pfx]`

[.description]
--
PFX config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pfx.path]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pfx.path[quarkus.datasource."datasource-name".reactive.trust-certificate-pfx.path]`

[.description]
--
Path to the key file (PFX format).
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pfx.password]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.trust-certificate-pfx.password[quarkus.datasource."datasource-name".reactive.trust-certificate-pfx.password]`

[.description]
--
Password of the key.
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pem]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pem[quarkus.datasource."datasource-name".reactive.key-certificate-pem]`

[.description]
--
PEM Key/cert config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pem.keys]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pem.keys[quarkus.datasource."datasource-name".reactive.key-certificate-pem.keys]`

[.description]
--
Comma-separated list of the path to the key files (Pem format).
--|list of string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pem.certs]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pem.certs[quarkus.datasource."datasource-name".reactive.key-certificate-pem.certs]`

[.description]
--
Comma-separated list of the path to the certificate files (Pem format).
--|list of string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-jks]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-jks[quarkus.datasource."datasource-name".reactive.key-certificate-jks]`

[.description]
--
JKS config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-jks.path]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-jks.path[quarkus.datasource."datasource-name".reactive.key-certificate-jks.path]`

[.description]
--
Path of the key file (JKS format).
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-jks.password]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-jks.password[quarkus.datasource."datasource-name".reactive.key-certificate-jks.password]`

[.description]
--
Password of the key file.
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pfx]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pfx[quarkus.datasource."datasource-name".reactive.key-certificate-pfx]`

[.description]
--
PFX config is disabled by default.
--|boolean 
|`false`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pfx.path]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pfx.path[quarkus.datasource."datasource-name".reactive.key-certificate-pfx.path]`

[.description]
--
Path to the key file (PFX format).
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pfx.password]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.key-certificate-pfx.password[quarkus.datasource."datasource-name".reactive.key-certificate-pfx.password]`

[.description]
--
Password of the key.
--|string 
|


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.reconnect-attempts]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.reconnect-attempts[quarkus.datasource."datasource-name".reactive.reconnect-attempts]`

[.description]
--
The number of reconnection attempts when a pooled connection cannot be established on first try.
--|int 
|`0`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.reconnect-interval]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.reconnect-interval[quarkus.datasource."datasource-name".reactive.reconnect-interval]`

[.description]
--
The interval between reconnection attempts when a pooled connection cannot be established on first try.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`PT1S`


a| [[quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.idle-timeout]]`link:#quarkus-datasource-data-sources-reactive-runtime-config_quarkus.datasource.-datasource-name-.reactive.idle-timeout[quarkus.datasource."datasource-name".reactive.idle-timeout]`

[.description]
--
The maximum time without data written to or read from a connection before it is closed.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|`no timeout`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
